--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.2",
     "fuse.js": "^7.1.0",
     "googleapis": "156.0.0",
+    "isomorphic-dompurify": "^2.31.0",
     "lottie-react": "2.4.1",
     "mailgun.js": "^12.0.1",
     "moment": "2.30.1",
@@ -42,13 +43,17 @@
     "sass": "1.87.0",
     "socket.io-client": "4.8.1",
     "sweetalert2": "11.19.1",
+    "validator": "^13.15.22",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
+    "@types/validator": "^13.15.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.18",
     "typescript": "5.8.3"
   }
